tests/toylang/neg/001660_mutation.toylang
program a = { while a program do sleep; } .
